# Agent-Frameworks

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.hermes/plans/: 2026-06-27_191000-phase0-foundation.md  2026-06-27_193000-phase1-governance.md
automation/: AGENTS.md  TODO.md  __init__.py  model_routing.py  session.py  work_queue.py
automation/.brain/: map.json.template  memory.md.template  session.md.template
automation/skills/model-routing/: SKILL.md
automation/skills/research/: SKILL.md
common/: __init__.py  __main__.py  config.py  logging.py  models.py  setup_cli.py
docs/: api.md
examples/: README.md  agent-frameworks.full.yaml  agent-frameworks.lmstudio.yaml  agent-frameworks.minimal.yaml  agent-frameworks.ollama.yaml  example_audit.py  example_model_routing.py  example_pattern_memory.py  example_session.py
examples/governance/: auditor.none.yaml  auditor.ollama.yaml  auditor.vllm.yaml
governance/: README.md  __init__.py  audit.py  auditor.py  auditor.yaml  claims.py  evidence.py  extract.py  governance.yaml
pattern-memory/: README.md  cli.py  config.py  demo.py  mcp_config.py  models.py  pattern_engine.py  pyproject.toml  server.py  storage.py  wrapper.py
pattern-memory/tests/: test_config.py  test_core.py  test_mcp_config.py  test_mcp_integration.py
tests/: test_automation.py  test_config.py  test_config_internals.py  test_governance.py  test_logging.py  test_models.py  test_setup.py  test_work_queue_roundtrip.py
